[package]
name = "mattr"
version = "0.0.3"
authors = ["Elliott Mahler <join.together@gmail.com>"]
edition = "2021"
description = "Utility for transposing multi-dimensional data"
license = "MIT OR Apache-2.0"

repository = "http://github.com/ejmahler/transpose"
documentation = "http://docs.rs/transpose"
keywords = ["array", "transpose", "2d"]
categories = ["algorithms", "data-structures", "no-std"]
readme = "README.md"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "transpose_benchmarks"
harness = false
